move url to previsecours

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: contact@previsecours.fr
 description: |
   P
 baseurl: ""
-url: "https://matchID-project.github.io"
+url: "https://www.previsecours.fr"
 
 authors:
   tiphaine:
