cleaner jekyll build with exclusion

--- a/_config.yml
+++ b/_config.yml
@@ -63,3 +63,8 @@ exclude:
   - vendor/cache/
   - vendor/gems/
   - vendor/ruby/
+  - Makefile
+  - docker-compose-build.yml
+  - docker-compose-serve.yml
+  - Dockerfile-build
+  - Dockerfile-serve
