added nginx docker conf for serving with nginx

--- a/_config.yml
+++ b/_config.yml
@@ -66,5 +66,6 @@ exclude:
   - Makefile
   - docker-compose-build.yml
   - docker-compose-serve.yml
+  - docker-compose-nginx.yml
   - Dockerfile-build
   - Dockerfile-serve
