--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ authors:
     image: /assets/images/TiphainePheNeau.png
     text: Tiphaine est titulaire d’un doctorat en informatique de l’Université Pierre et Marie Curie. Après ses études, elle a voulu utiliser ses capacités d’abstraction, d’observation et de réalisation pour s’attaquer à de nouvelles problématiques en tant que data scientist. Elle a travaillé dans des entreprises telles que Dailymotion, Clustree ou Saegus sur une grande variété de sujets. En tant que data scientist, elle apprécie combiner les connaissances métiers avec les aspects techniques pour obtenir des solutions efficaces et réalistes.
   guillaume:
-    name: Guillaume Lancrenon 
+    name: Guillaume Lancrenon
     linkedin: guillaumelancrenon
     image: /assets/images/GuillaumeLancrenon.png
-    text: Guillaume Lancrenon a débuté comme ingénieur d’exploration sismique chez Westerngeco, une filiale offshore de Schlumberger. Il est ensuite passé par l’entreprenariat avec la réalisation de CommoPrices, une startup spécialisée dans le suivi du cours des matières premières. Il a récemment rejoint le programme EIG pour mettre ses compétences au service des pompiers.
+    text: Diplômé de Supélec, Guillaume Lancrenon a d'abord travaillé dans l'exploration sismique offshore chez Schlumberger. Il est ensuite passé par l’entreprenariat avec la réalisation de CommoPrices, une startup spécialisée dans le suivi du cours des matières premières, ce qui lui aura permis d'approfondir ses compétences de développeur fullstack. Il a récemment rejoint le programme EIG pour mettre ses compétences au service des pompiers, tout en élargissant ses compétences à la datascience. 
   daniel:
     name: Daniel Ansellem
     image: /assets/images/ansellem.JPG
